# ctypeslib

./: .gitignore  .gitignore~  .travis.yml  BUILD.md  CHANGES.md  ChangeLog  MANIFEST.in  README  README.md  TODO  atom.mk  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.sh
.github/workflows/: ctypeslib-linux.yml  release.yml
clang/: CIndex.cpp  cindex.py  clang2ctypes.py  libclang.exports
ctypes_codegen/: dynmod.py
ctypes_codegen/test/: __init__.py  test_constants.py
ctypeslib/: __init__.py  byref_at.py  clang2py.py  codegenerator.py  dynamic_module.py  gccxmlparser.py  h2xml.py  headers.py  library.py  xml2py.py
ctypeslib/codegen/: cache.py  cindex.py  clangparser.py  codegenerator.py  config.py  cparser.py  cursorhandler.py  gccxmlparser.py  handler.py  hash.py  preprocess.py  typedesc.py  typehandler.py  util.py
ctypeslib/contrib/: __init__.py  get_exports.py  pythonhdr.py
ctypeslib/data/: fundamental_type_name.tpl  headers.tpl  pointer_type.tpl  pythonic_type_name.tpl  string_cast.tpl  structure_type.tpl
ctypeslib/experimental/: byref_at.py
ctypeslib/test/: __init__.py  byref_offset.py  runtests.py  stdio.py  test_byref.py  test_codegen.py  test_constants.py  test_dynmodule.py  test_pythonhdr.py  test_toolchain.py  winapi.py  winapi_without_defines.py
ctypeslib/util/: __init__.py  byref_at.py
docs/: ctypeslib 2.0 Introduction.ipynb
scripts/: clang2py  h2xml.py  xml2py.py
test/: __init__.py  conftest.py  test-clang1.c  test-clang3.c  test_api.py  test_bitfield.py  test_byref.py  test_callbacks.py  test_clang2py.py  test_clangparser.py  test_codegen.py  test_cross_arch.py  test_enum.py  test_example_script.py  test_fast_clang.py  test_function.py  test_macro.py  test_macro_advanced.py  test_pointer.py  test_record.py  test_strings.py  test_toolchain.py  test_types.py  test_types_sizes.py  test_types_values.py  test_utils.py  util.py
(+42 files in other folders)
