[metadata]
name = ctypeslib2
author = Loic Jaquemet
author_email = loic.jaquemet+python@gmail.com
license = License :: OSI Approved :: MIT License
description = ctypeslib2 - FFI toolkit, relies on clang
url = https://github.com/trolldbois/ctypeslib
download_url = https://github.com/trolldbois/ctypeslib/releases
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = ctypeslib, ctypeslib.codegen
setup_requires = setuptools>=44; wheel; toml; setuptools_scm>=3.4.3
install_requires = clang>=11
test_suite = test.alltests

[options.entry_points]
console_scripts = clang2py = ctypeslib.clang2py:main

[options.package_data]
ctypeslib =
    data/fundamental_type_name.tpl
    data/headers.tpl
    data/pointer_type.tpl
    data/string_cast.tpl
    data/structure_type.tpl

[coverage:run]
relative_files = True
